## automake.am
##
## wavs/ automake.am for paravel_install3
##
## Use automake to process this into a Makefile.in
##
##   (C) Copyright 2010-14 Fred Gleason <fredg@paravelsystems.com>
##       All Rights Reserved.
##

EXTRA_DIST = 999999_001.wav.gz

CLEANFILES = *~

DISTCLEANFILES = *~\
                 Makefile\
                 Makefile.in

MAINTAINERCLEANFILES = *~\
                       Makefile\
                       Makefile.in
